--- a/Presentation/ShorteningLink/appsettings.json
+++ b/Presentation/ShorteningLink/appsettings.json
@@ -1,3 +1,12 @@
 {
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "DataBase": {
+    "ConnectionString": "server=localhost;database=DatabaseFromEugeneAsmak;user=root;password=password;"
+  }
 }
